--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        " 'trip_distance': 18.38}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,12 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    pass"
+    "    return [trip['pickup_latitude'], trip['pickup_longitude']]"
    ]
   },
   {
